--- a/index.html
+++ b/index.html
@@ -83,8 +83,36 @@
              </div>
         </div>
         <!-- Section-2 -->
-        <div class="w-full" id="product">
-            <!-- Wide full-width container for additional content -->
+        <div class="grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-14" id="product">
+          <div class="flex flex-col justify-center col-span-1  text-center lg:text-start">
+            <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">
+              The Clever Place to Keep Your Cache
+            </h1>
+              <p class="mb-6 text-base font-normal leading-7 lg:w-3/4 text-grey-900">
+                Cache Bank is designed exclusively for software developers. We understand your finncial needs are as unique as the code you write. Our services offer cutting-edge financial solutions that help you take care of your cash.
+              </p>
+              <div class="flex flex-col items-center gap-4 lg:flex-row">
+                <button class="flex items-center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">Join Cache Now</button>
+                <button class="flex items-center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">Join Our Discord Server</button>
+              </div>
+          </div>
+          <div class="items-center justify-end hidden col-span-1 md:flex">
+            <img class="w-4/5 rounded-md" src="assets/component-2/hero-image.png" alt="">
+          </div>
+        </div>
+        <div class="w-full">
+          <div class="container flex flex-col items-center gap-6 mx-auto my-40">
+            <p class="text-center text-dark-grey-600 font-semibold mb-10 text-2xl">
+              Endorsed by global companies like
+            </p>
+            <div class="flex flex-wrap justify-center w-full gap-6 lg:gap-0 lg:flex-nowrap lg:justify-between">
+              <img src="assets/component-2/logos/nike-logo.svg" alt="">
+              <img src="assets/component-2/logos/amazon-logo.svg" alt="">
+              <img src="assets/component-2/logos/minecraft-logo.svg" alt="">
+              <img src="assets/component-2/logos/steam-logo.svg" alt="">
+              <img src="assets/component-2/logos/notion-logo.svg" alt="">
+            </div>
+          </div>
         </div>
         <!-- Section-3 -->
         <div class="container mx-auto" id="features"> 
