--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
              </div>
         </div>
         <!-- Section-2 -->
-        <div class="grid px-20 w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-14" id="product">
+        <div class="grid px-28 w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-14" id="product">
           <div class="flex flex-col justify-center col-span-1  text-center lg:text-start">
             <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900">
               The Clever Place to Keep Your Cache
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="w-full">
-          <div class="container flex flex-col items-center gap-6 mx-auto my-40">
+          <div class="container flex flex-col items-center gap-6 mx-auto my-20">
             <p class="text-center text-dark-grey-600 font-semibold mb-10 text-2xl">
               Endorsed by global companies like
             </p>
@@ -218,9 +218,77 @@
               </div>
             </div>
           </div>
+        </div>
         <!-- Section-4 -->
-        <div class="w-full" id="pricing">
-            <!-- Wide full-width container for additional content -->
+        <div class="w-full px-28" id="pricing">
+            <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+              <div class="grid w-full grid-cols-1 lg:grid-cols-4 md:grid-cols-2 gap-y-8">
+                <!-- Statistic Blocks -->
+                <div class="flex flex-col items-center">
+                  <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto1" countto="250">250</span>+</h3>
+                  <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Hours Saved Sitting in the Bank</p>
+                </div>
+                <div class="flex flex-col items-center">
+                  <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto2" countto="12">12</span>m</h3>
+                  <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Cache Saved</p>
+                </div>
+                <div class="flex flex-col items-center">
+                  <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto3" countto="2600" data-decimal="1">2.8</span>k+</h3>
+                  <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Global Partners</p>
+                </div>
+                <div class="flex flex-col items-center">
+                  <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900"><span id="countto4" countto="18000">18,000</span>+</h3>
+                  <p class="text-base font-medium leading-7 text-center text-dark-grey-600">Happy Developrs</p>
+                </div>
+              </div>
+            </div>
+            <!-- Getting Started -->
+            <div class="w-full">
+              <div class="grid w-full grid-cols-1 gap-32 lg:grid-cols-2 mb-12">
+                <div class="bg-cover bg-center hidden lg:block rounded-3xl" style="background-image: url(assets/component-4/getting-started.png);">
+                </div>
+                <div class="flex flex-col gap-16">
+                  <div class="flex flex-col gap-2 text-center md:text-start">
+                    <h2 class="text-3xl font-extrabold md:text-4xl lg:text-5xl text-dark-grey-900">How Cache Works?</h2>
+                    <p class="text-base font-medium leading-7 text-dark-grey-600">Cache Bank Simplifies sign-up with a user-friendly website, streamlined account options, and an efficient verification process, making banking accessible and hassle-free for developers.</p>
+                  </div>
+                  <div class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10">
+                    <!-- Step 1 -->
+                    <div class="flex flex-col items-start gap-1">
+                      <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                        <span class="text-base font-bold leading-7 text-white">1</span>
+                      </div>
+                      <h3 class="text-base font-bold leading-tight text-dark-grey-900 border-white">Visit Cache Bank Website</h3>
+                      <p class="text-base font-medium leading-7 text-dark-grey-600">Go to Cache Bank, click "Sign Up" or "Open an Account".</p>
+                    </div>
+                    <!-- Step 2 -->
+                    <div class="flex flex-col items-start gap-1">
+                      <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                        <span class="text-base font-bold leading-7 text-white">2</span>
+                      </div>
+                      <h3 class="text-base font-bold leading-tight text-dark-grey-900 border-white">Choose Account Type</h3>
+                      <p class="text-base font-medium leading-7 text-dark-grey-600">Select from Checking, Savings, or Developer-specific accounts.</p>
+                    </div>
+                    <!-- Step 3 -->
+                    <div class="flex flex-col items-start gap-1">
+                      <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                        <span class="text-base font-bold leading-7 text-white">3</span>
+                      </div>
+                      <h3 class="text-base font-bold leading-tight text-dark-grey-900 border-white">Provide Personal Information</h3>
+                      <p class="text-base font-medium leading-7 text-dark-grey-600">Complete the form with your details and identification for security.</p>
+                    </div>
+                    <!-- Step 4 -->
+                    <div class="flex flex-col items-start gap-1">
+                      <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                        <span class="text-base font-bold leading-7 text-white">4</span>
+                      </div>
+                      <h3 class="text-base font-bold leading-tight text-dark-grey-900 border-white">Verify and Submit</h3>
+                      <p class="text-base font-medium leading-7 text-dark-grey-600">Check your information, agree to terms, and submit for account approval.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </div>
         <!-- Section-5 -->
         <div class="w-full" id="company">
